removed x./chatty and added x/chat
